samples/glossentry/invalid/R4.dita
<?xml version="1.0" encoding="UTF-8"?>
<glossentry>
  <prolog/>
  <glossterm>Term</glossterm>
  <glossdef><p>Definition.</p></glossdef>
</glossentry>